# autoplot-ai-mcp

./: Makefile  README.md  client.py  main.py  pyproject.toml
configs/: api_config.toml  config.toml
src/: __init__.py  app.py
src/server/: __init__.py  server.py
src/tools/: __init__.py  dataset_discovery.py
src/utils/: __init__.py  config.py  exceptions.py  logger.py  models.py
